// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders correctly with color prop 1`] = `
.c0 {
  color: #070707;
}

<h1
  className="c0"
  color="red"
/>
`;

exports[`H1 renders correctly with floatLeft prop 1`] = `
<h1
  className=""
/>
`;

exports[`H1 renders correctly with floatRight prop 1`] = `
<h1
  className=""
/>
`;

exports[`H1 renders correctly with no props 1`] = `
<h1
  className=""
/>
`;

exports[`H1 renders correctly with size prop 1`] = `
.c0 {
  font-size: 36px;
}

<h1
  className="c0"
  size="31px"
/>
`;

exports[`H1 renders correctly with weight prop 1`] = `
.c0 {
  font-weight: normal;
}

<h1
  className="c0"
/>
`;

exports[`H2 renders correctly with color prop 1`] = `
.c0 {
  color: red;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
  color="red"
/>
`;

exports[`H2 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #070707;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with no props 1`] = `
.c0 {
  color: #070707;
  font-size: 28px;
  font-weight: normal;
}

<h2
  className="c0"
/>
`;

exports[`H2 renders correctly with size prop 1`] = `
.c0 {
  color: #070707;
  font-size: 31px;
  font-weight: normal;
}

<h2
  className="c0"
  size="31px"
/>
`;

exports[`H2 renders correctly with weight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 28px;
  font-weight: bold;
}

<h2
  className="c0"
/>
`;

exports[`H3 renders correctly with color prop 1`] = `
.c0 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="red"
/>
`;

exports[`H3 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#024A8F"
/>
`;

exports[`H3 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#024A8F"
/>
`;

exports[`H3 renders correctly with no props 1`] = `
.c0 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#024A8F"
/>
`;

exports[`H3 renders correctly with size prop 1`] = `
.c0 {
  color: #024A8F;
  font-size: 31px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#024A8F"
  size="31px"
/>
`;

exports[`H3 renders correctly with weight prop 1`] = `
.c0 {
  color: #024A8F;
  font-size: 22px;
  font-weight: normal;
}

<h3
  className="c0"
  color="#024A8F"
/>
`;

exports[`H4 renders correctly with color prop 1`] = `
.c0 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
  color="red"
/>
`;

exports[`H4 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
  color="#070707"
/>
`;

exports[`H4 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
  color="#070707"
/>
`;

exports[`H4 renders correctly with no props 1`] = `
.c0 {
  color: #070707;
  font-size: 18px;
  font-weight: normal;
}

<h4
  className="c0"
  color="#070707"
/>
`;

exports[`H4 renders correctly with size prop 1`] = `
.c0 {
  color: #070707;
  font-size: 31px;
  font-weight: normal;
}

<h4
  className="c0"
  color="#070707"
  size="31px"
/>
`;

exports[`H4 renders correctly with weight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 18px;
  font-weight: bold;
}

<h4
  className="c0"
  color="#070707"
/>
`;

exports[`H5 renders correctly with clearLeft prop 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#070707"
/>
`;

exports[`H5 renders correctly with clearRight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#070707"
/>
`;

exports[`H5 renders correctly with color prop 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="red"
/>
`;

exports[`H5 renders correctly with floatLeft prop 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#070707"
/>
`;

exports[`H5 renders correctly with floatRight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#070707"
/>
`;

exports[`H5 renders correctly with no props 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#070707"
/>
`;

exports[`H5 renders correctly with size prop 1`] = `
.c0 {
  color: #070707;
  font-size: 31px;
  font-weight: 300;
}

<h5
  className="c0"
  color="#070707"
  size="31px"
/>
`;

exports[`H5 renders correctly with weight prop 1`] = `
.c0 {
  color: #070707;
  font-size: 14px;
  font-weight: bold;
}

<h5
  className="c0"
  color="#070707"
/>
`;

exports[`Label renders correctly with no props 1`] = `
.c0 {
  display: block;
  color: #070707;
  font-size: 14px;
  font-weight: normal;
}

<label
  className="c0"
/>
`;

exports[`P1 renders correctly with no props 1`] = `
.c0 {
  margin: 0;
  color: #070707;
  font-size: 1rem;
  font-weight: normal;
}

<p
  className="c0"
  size={undefined}
/>
`;

exports[`S1 renders correctly with no props 1`] = `
.c0 {
  color: #070707;
  font-size: 12px;
  font-weight: normal;
}

<span
  className="c0"
/>
`;
